--- a/css/style.css
+++ b/css/style.css
@@ -117,18 +117,25 @@ ul.slide li {
     width: 1200px;
     height: 560px;
     margin-top: 80px;
-    background: #bbb;
+    /* background: #bbb; */
 }
 .contents .new_banner .new_nav {
-    width: 266px;
+    /* width: 266px; */
     height: 40px;
     margin: 0 auto;
     background: #fff;
 }
 .contents .new_banner .new_nav .arriv_title{
     font-size: 36px;
-    padding-top: 16px;
+    padding-top: 26px;
     text-align: center;
+}
+.flex {
+    display: flex;
+    margin-top: 12px;
+}
+.justify-between {
+    justify-content: space-between;
 }
 .contents .new_banner .new_nav .item1 {
     width: 378px;
@@ -142,6 +149,10 @@ ul.slide li {
     font-size: 12px;
     color: #424242;
 }
+.contents .new_banner .new_nav .item1 .new1_title p {
+    font-size: 12px;
+    color: #000;
+}
 .contents .new_banner .new_nav .item2 {
     width: 378px;
     height: 408px;
@@ -150,6 +161,14 @@ ul.slide li {
     width: 375.75px;
     height: 370px;
 }
+.contents .new_banner .new_nav .item2 .new2_title {
+    font-size: 12px;
+    color: #424242;
+}
+.contents .new_banner .new_nav .item2 .new2_title p {
+    font-size: 12px;
+    color: #000;
+}
 .contents .new_banner .new_nav .item3 {
     width: 378px;
     height: 408px;
@@ -157,6 +176,14 @@ ul.slide li {
 .contents .new_banner .new_nav .item3 img {
     width: 375.75px;
     height: 370px;
+}
+.contents .new_banner .new_nav .item3 .new3_title {
+    font-size: 12px;
+    color: #424242;
+}
+.contents .new_banner .new_nav .item3 .new3_title p {
+    font-size: 12px;
+    color: #000;
 }
 .contents .collection_banner {
     width: 1200px;
@@ -169,6 +196,174 @@ ul.slide li {
     height: 720px;
     margin-top: 40px;
     background: #ddd;
+}
+.contents .best_banner .best_nav {
+    /* width: 266px; */
+    height: 36px;
+    margin: 0 auto;
+    background: #fff;
+}
+.contents .best_banner .best_nav .best_tit{
+    font-size: 36px;
+    padding-top: 26px;
+    text-align: center;
+}
+.contents .best_banner .best_nav .best_row1 {
+    width: 100%;
+}
+.flex {
+    display: flex;
+    margin-top: 20px;
+}
+.justify-between {
+    justify-content: space-between;
+}
+.contents .best_banner .best_nav .best_row1 .item1 {
+    width: 254px;
+    height: 298px;
+}
+.contents .best_banner .best_nav .best_row1 .item1 img {
+    width: 230px;
+    height: 250px;
+}
+.contents .best_banner .best_nav .item1 .best1_title {
+    padding-top: 3px;
+    font-size: 11px;
+    color: #424242;
+}
+.contents .best_banner .best_nav .item1 .best1_title p {
+    font-size: 12px;
+    color: #000;
+}
+.contents .best_banner .best_nav .best_row1 .item2 {
+    width: 254px;
+    height: 298px;
+}
+.contents .best_banner .best_nav .best_row1 .item2 img {
+    width: 230px;
+    height: 250px;
+}
+.contents .best_banner .best_nav .item2 .best2_title {
+    padding-top: 3px;
+    font-size: 11px;
+    color: #424242;
+}
+.contents .best_banner .best_nav .item2 .best2_title p {
+    font-size: 12px;
+    color: #000;
+}
+.contents .best_banner .best_nav .best_row1 .item3 {
+    width: 254px;
+    height: 298px;
+}
+.contents .best_banner .best_nav .best_row1 .item3 img {
+    width: 230px;
+    height: 250px;
+}
+.contents .best_banner .best_nav .item3 .best3_title {
+    padding-top: 3px;
+    font-size: 11px;
+    color: #424242;
+}
+.contents .best_banner .best_nav .item3 .best3_title p {
+    font-size: 12px;
+    color: #000;
+}
+.contents .best_banner .best_nav .best_row1 .item4 {
+    width: 254px;
+    height: 298px;
+}
+.contents .best_banner .best_nav .best_row1 .item4 img {
+    width: 230px;
+    height: 250px;
+}
+.contents .best_banner .best_nav .item4 .best4_title {
+    padding-top: 3px;
+    font-size: 11px;
+    color: #424242;
+}
+.contents .best_banner .best_nav .item4 .best4_title p {
+    font-size: 12px;
+    color: #000;
+}
+.contents .best_banner .best_nav .best_row2 {
+    width: 100%;
+}
+.flex {
+    display: flex;
+    margin-top: 12px;
+}
+.justify-between {
+    justify-content: space-between;
+}
+.contents .best_banner .best_nav .best_row2 .item5 {
+    margin-top: 10px;
+    width: 258px;
+    height: 298px;
+}
+.contents .best_banner .best_nav .best_row2 .item5 img {
+    width: 230px;
+    height: 250px;
+}
+.contents .best_banner .best_nav .item5 .best5_title {
+    padding-top: 3px;
+    font-size: 11px;
+    color: #424242;
+}
+.contents .best_banner .best_nav .item5 .best5_title p {
+    font-size: 12px;
+    color: #000;
+}
+.contents .best_banner .best_nav .best_row2 .item6 {
+    margin-top: 10px;
+    width: 258px;
+    height: 298px;
+}
+.contents .best_banner .best_nav .best_row2 .item6 img {
+    width: 230px;
+    height: 250px;
+}
+.contents .best_banner .best_nav .item6 .best6_title {
+    font-size: 11px;
+    color: #424242;
+}
+.contents .best_banner .best_nav .item5 .best5_title p {
+    font-size: 12px;
+    color: #000;
+}
+.contents .best_banner .best_nav .best_row2 .item7 {
+    margin-top: 10px;
+    width: 258px;
+    height: 298px;
+}
+.contents .best_banner .best_nav .best_row2 .item7 img {
+    width: 230px;
+    height: 250px;
+}
+.contents .best_banner .best_nav .item7 .best7_title {
+    font-size: 11px;
+    color: #424242;
+}
+.contents .best_banner .best_nav .item7 .best7_title p {
+    font-size: 12px;
+    color: #000;
+}
+.contents .best_banner .best_nav .best_row2 .item8 {
+    margin-top: 10px;
+    width: 258px;
+    height: 298px;
+}
+.contents .best_banner .best_nav .best_row2 .item8 img {
+    width: 230px;
+    height: 250px;
+}
+.contents .best_banner .best_nav .item8 .best8_title {
+    font-size: 11px;
+    color: #424242;
+}
+.contents .best_banner .best_nav .item8 .best8_title p {
+    font-size: 12px;
+    color: #000;
 }
 .contents .preview_banner {
     width: 1200px;
