--- a/css/style.css
+++ b/css/style.css
@@ -85,6 +85,7 @@ header .nav_box ul.main>li {
     width: 11%;
     /* column-width: 30px; */
     position: relative;
+    word-spacing: 3em;
 }
 /* header .nav_box ul.main>li>img {
     float: left;
@@ -105,9 +106,9 @@ header .nav_box ul.main>li:hover>a {
 }
 header .nav_box ul.main>li>ul.sub_menu {
     position: absolute; 
-    left: -15px;
+    left: -20px;
     top: 72px;
-    width: 130px;
+    width: 140px;
     line-height: 30px; 
     margin-top: 7px;
     box-sizing: border-box;
@@ -219,6 +220,34 @@ ul.slide li {
 .contents .new_banner .new_nav .item3 .new3_title p {
     font-size: 12px;
     color: #000;
+}
+.contents .new_banner .slick_wrap {
+    width: 100%;
+    position: relative;
+}
+.contents .new_banner .slick_wrap .new_slick .slick_btn {
+    position: absolute;
+    left: 0;
+    top: 23px;
+    width: 244px;
+    height: 8px;
+    background: #DFDDDD;
+    opacity: 0.4;
+    box-sizing: border-box;
+    border: 1px solid #DFDDDD;
+    border-radius: 20px 20px 20px 20px;
+}
+.contents .new_banner .slick_wrap .new_slick .slick_btn:hover {
+    background: #000;
+    opacity: 0.5;
+    cursor: pointer;
+}
+.contents .new_banner .slick_wrap .new_slickline{
+    position: absolute;
+    left: 0;
+    top: 28px;
+    width: 1183px;
+    background: #DFDDDD;
 }
 .contents .collection_banner {
     width: 1200px;
@@ -703,14 +732,14 @@ ul.slide li {
     height: 50px;
     margin-top: 10px;
     background: #fff;
-    font-size: 17px;
+    font-size: 16px;
     box-sizing: border-box;
     border: 1px solid #000;
 }
 .look_con .lookbook_wrap .looktit_box .shop_btn:hover {
     color: #fff;
     background: #000;
-    font-size: 17px;
+    font-size: 16px;
     line-height: 50px;
     text-align: center;
     cursor: pointer;
@@ -729,11 +758,6 @@ ul.slide li {
     height: 502px;
     /* background: #bbb; */
 }
-/* .footer1_wrap {
-    width: 1200px;
-    height: 502px;
-    background: #bbb;
-} */
 .footer1_con .footer1_wrap p {
     width: 278px;
     height: 74px;
@@ -745,23 +769,30 @@ ul.slide li {
 .footer1_con .footer1_wrap .box {
     float: left;
     width: 176px;
-    height: 190px;
+    height: 220px;
     padding-left: 10px;
 }
 .footer1_con .footer1_wrap .box h2 {
     padding-top: 60px;
     color: #000;
+    text-shadow: lightgray 2px 1px;
     font-size: 15px;
     font-weight: bold;
 }
 .footer1_con .footer1_wrap .box ul.inner {
     width: 100%;
     margin-right: 12px;
-    padding-top: 10px;
+    padding-top: 15px;
 }
 .footer1_con .footer1_wrap .box ul.inner li {
     color: #666;
+    line-height: 30px;
     font-size: 15px;
+}
+.footer1_con .footer1_wrap .box ul.inner li:hover {
+    color: #000;
+    font-family: bold;
+    cursor: pointer;
 }
 .footer1_con .footer1_wrap .copy {
     float: left;
@@ -778,31 +809,37 @@ ul.slide li {
     height: 160px;
     margin-left: -360px;
     background: #2C2C2C;
+    position: relative;
 }
 .footer2_con .footer2_wrap {
+    position: absolute;
+    left: 360px;
+    top: 0;
     width: 1200px;
     height: 160px;
 }
-.footer2_con .footer2_wrap .footer_logo {
+.flex {
+    display: flex;
+    margin-top: 12px;
+}
+.justify-between {
+    justify-content: space-between;
+}
+.footer2_con .footer2_wrap .footer2_logo {
     width: 15px;
     height: 15px;
 }
-.footer2_con .footer2_wrap .footer_logo img {
+.footer2_con .footer2_wrap .footer2_logo img {
     width: 15px;
     height: 15px;
 }
-.footer2_con .footer2_wrap .footer_logo a {
+.footer2_con .footer2_wrap .country_tit {
     width: 45px;
-    height: 15px;
-    margin-left: 9px;
+}
+.footer2_con .footer2_wrap .country_tit li {
     color: #DBDBDB;
     font-size: 12px;
 }
-/* .footer2_wrap .country_tit li {
-    margin-left: 9px;
-    color: #DBDBDB;
-    font-size: 12px;
-} */
 .footer2_wrap .icon_wrap {
     padding-left: 10px;
     padding-top: 34px;
@@ -827,13 +864,17 @@ ul.slide li {
     color: #DBDBDB;
     width: 700px;
     height: 150px;
+    font-size: 12px;
 }
 .footer2_wrap .footer_tit2 {
+    margin-top: 30px;
+    padding-right: 40px;
     width: 430px;
     height: 150px;
 }
 .footer2_wrap .footer_tit2 li {
     color: #DBDBDB;
-    width: 500px;
+    width:  500px;
     height: 150px;
+    font-size: 12px;
 }
